# ai-agent-mcp

./: .gitignore  README.md  client.py  pyproject.toml  requirements.txt  server.py  startup.py
.github/workflows/: ci.yml
data/: to_summarize.txt
src/: check_dir.py  check_path.py  env_vars_utils.py  lang_change_utils.py  mcp_client.py  mcp_server.py  query_agent.py  summarize_text.py  summaryMapReduce.py  text_summarize.py  translate_text.py
templates/: index.html
tests/: conftest.py  test_env_vars_utils.py  test_lang_change_utils.py  test_mcp_client.py  test_mcp_server.py  test_mcp_server_main.py  test_query_agent.py  test_query_agent_extra.py  test_summarize_text.py
